--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: scroll;
+  background: url("./images/boliviainteligente-Fk7D4BqI0sU-unsplash.jpg") no-repeat;
+  background-size: cover;
 }
 
 code {
